k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: msa-nodejs-webapp
          image: docker.io/dainforest/msa-nodejs-webapp:v1
          ports:
            - containerPort: 3000
              protocol: TCP
